tests/snapshots/execution_spec__graphql-datasource-with-args.md_test_1.snap
---
source: tests/execution_spec.rs
expression: response
---
{
  "status": 200,
  "headers": {
    "content-type": "application/json"
  },
  "body": {
    "data": {
      "post": {
        "id": 1,
        "user": {
          "name": "Leanne Graham"
        }
      }
    }
  }
}
