tests/snapshots/execution_spec__grpc-batch.md_assert_0.snap
---
source: tests/execution_spec.rs
expression: response
---
{
  "status": 200,
  "headers": {
    "content-type": "application/json"
  },
  "body": {
    "data": {
      "newsById2": {
        "title": "Note 2"
      },
      "newsById3": {
        "title": "Note 3"
      }
    }
  }
}