tests/snapshots/execution_spec__grpc-error.md_test_0.snap
---
source: tests/execution_spec.rs
expression: response
---
{
  "status": 200,
  "headers": {
    "content-type": "application/json"
  },
  "body": {
    "data": null,
    "errors": [
      {
        "message": "gRPC Error: status: 3, description: `Client specified an invalid argument`, message: `grpc message`",
        "locations": [
          {
            "line": 1,
            "column": 9
          }
        ]
      }
    ]
  }
}
