tests/snapshots/execution_spec__grpc-override-url-from-upstream.md_test_0.snap
---
source: tests/execution_spec.rs
expression: response
---
{
  "status": 200,
  "headers": {
    "content-type": "application/json"
  },
  "body": {
    "data": {
      "news": {
        "news": [
          {
            "id": 1
          },
          {
            "id": 2
          }
        ]
      }
    }
  }
}
