tests/snapshots/execution_spec__grpc-proto-with-same-package.md_assert_0.snap
---
source: tests/execution_spec.rs
expression: response
---
{
  "status": 200,
  "headers": {
    "content-type": "application/json"
  },
  "body": {
    "data": {
      "foo": {
        "foo": "test-foo"
      },
      "bar": {
        "bar": "test-bar"
      }
    }
  }
}
