tests/snapshots/execution_spec__grpc-proto-with-same-package.md_client.snap
---
source: tests/execution_spec.rs
expression: client
---
type Bar {
  bar: String
}

scalar Date

scalar Email

scalar Empty

type Foo {
  foo: String
}

scalar JSON

scalar PhoneNumber

type Query {
  bar: Bar!
  foo: Foo!
}

scalar Url

schema {
  query: Query
}
