tests/snapshots/execution_spec__grpc-proto-with-same-package.md_merged.snap
---
source: tests/execution_spec.rs
expression: merged
---
schema @server(graphiql: true, port: 8000) @upstream(baseURL: "http://localhost:50051") @link(src: "foo.proto", type: Protobuf) @link(src: "bar.proto", type: Protobuf) {
  query: Query
}

type Bar {
  bar: String
}

type Foo {
  foo: String
}

type Query {
  bar: Bar! @grpc(method: "test.BarService.GetBar")
  foo: Foo! @grpc(method: "test.FooService.GetFoo")
}
